--- a/README.org
+++ b/README.org
@@ -21,6 +21,8 @@ Finally, copy the dotfiles to your home directory.
   - [[https://geoff.greer.fm/ag/][The Silver Searcher]]
   - [[https://x.org/][xprop]]
   - [[https://www.fsd.it/shop/fonts/pragmatapro/][PragmataPro Mono]] or [[https://adobe-fonts.github.io/source-code-pro/][Source Code Pro]]
+- Arduino:
+  - [[https://www.arduino.cc/en/Main/Software][Arduino IDE]]
 - C family:
   - [[https://gcc.gnu.org/][GCC]]
   - [[http://mesonbuild.com/][Meson]]
@@ -47,6 +49,10 @@ To install dependencies on Arch Linux, run:
   pacman -S git hunspell hunspell-en the_silver_searcher xorg-xprop
   # Install PragmataPro Mono or
   pacman -S adobe-source-code-pro-fonts
+
+  ### Arduino
+  pacman -S arduino arduino-avr-core
+  gpasswd -a `whoami` uucp
 
   ### C family
   pacman -S gcc meson
